--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.12",
     "next": "14.2.12",
+    "next-auth": "^4.24.7",
     "react": "18.3.1",
     "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12"
   }
 }
